@Value真的好用，还支持嵌套